@@ -4,6 +4,7 @@ version 0.42
 	* Simple reminders/alarms handling with multiple backends
 	* Alarm editor for events and tasks with basic functionalities
 	* New images from OpenClipArt (bell_gold.svg)
+	* Fix ticket #12 : timezone problems with recurrent events 
 
 version 0.41 (2010/03/15)
 	* Threads/memory pools/notifications fixes
